--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,11 @@ VAULT_UNSEAL_KEY_3="xxxxxxxx"
 CLOUDFLARE_EMAIL="dan@example.com"
 CLOUDFLARE_TOKEN="xxxxxxxx"
 
+# emqx
+EMQX_ADMIN_PASSWORD="xxxxxxxx"
+EMQX_USER1_NAME="xxxxxxxx"
+EMQX_USER1_PASSWORD="xxxxxxxx"
+EMQX_LB_IP="192.168.0.100"
+
 # flux
-FLUX_GITHUB_DEPLOY_KEY="xxxxxxxx"
-FLUX_GITHUB_KNOWN_HOSTS="xxxxxxxx"
 FLUX_SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
