--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -18,6 +18,7 @@ spec:
         CLOUDFLARE_EMAIL: "{{.CLOUDFLARE_EMAIL}}"
         DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
         DOMAIN: "{{.DOMAIN}}"
+        EMQX_LB_IP: "{{.EMQX_LB_IP}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
   dataFrom:
     - extract:
