--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -21,6 +21,9 @@ spec:
         ENVIRONMENT: "{{.ENVIRONMENT}}"
         EMQX_LB_IP: "{{.EMQX_LB_IP}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
+        SERVER_CIDR: "{{.SERVER_CIDR}}"
+        VIP_IP: "{{.VIP_IP}}"
+        VIP_PORT: "{{.VIP_PORT}}"
   dataFrom:
     - extract:
         key: /cluster/k8s
