--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 ENVIRONMENT="example"
 DOMAIN=example.com
 VIP_IP="192.168.0.100"
+VIP_PORT="443"
+SERVER_CIDR="192.168.0.0/24"
 
 # vault
 VAULT_ADDR="https://vault.example.com"
