--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -171,6 +171,9 @@ tasks:
           ENVIRONMENT="${ENVIRONMENT}"
           EMQX_LB_IP="${EMQX_LB_IP}"
           LOCAL_DOMAIN="${LOCAL_DOMAIN}"
+          SERVER_CIDR="${SERVER_CIDR}"
+          VIP_IP="${VIP_IP}"
+          VIP_PORT="${VIP_PORT}"
       # cert-manager
       - vault kv put -mount=kv/ cert-manager/cloudflare          
           CLOUDFLARE_TOKEN="${CLOUDFLARE_TOKEN}"
