--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ./cilium/ks.yaml
   # - ./coredns/ks.yaml
   # - ./descheduler/ks.yaml
-  # - ./local-path-provisioner/ks.yaml
+  - ./local-path-provisioner/ks.yaml
   # - ./metrics-server/ks.yaml
   # - ./node-feature-discovery/ks.yaml
   # - ./reloader/ks.yaml
