--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./cilium/ks.yaml
-  # - ./coredns/ks.yaml
+  - ./coredns/ks.yaml
   # - ./descheduler/ks.yaml
   - ./local-path-provisioner/ks.yaml
   # - ./metrics-server/ks.yaml
