--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # Flux-Kustomizations
   - ./cilium/ks.yaml
   - ./coredns/ks.yaml
-  # - ./descheduler/ks.yaml
+  - ./descheduler/ks.yaml
   - ./local-path-provisioner/ks.yaml
   # - ./metrics-server/ks.yaml
   # - ./node-feature-discovery/ks.yaml
