--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -11,6 +11,6 @@ resources:
   - ./coredns/ks.yaml
   - ./descheduler/ks.yaml
   - ./local-path-provisioner/ks.yaml
-  # - ./metrics-server/ks.yaml
+  - ./metrics-server/ks.yaml
   # - ./node-feature-discovery/ks.yaml
-  # - ./reloader/ks.yaml
+  - ./reloader/ks.yaml
