--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -12,5 +12,5 @@ resources:
   - ./descheduler/ks.yaml
   - ./local-path-provisioner/ks.yaml
   - ./metrics-server/ks.yaml
-  # - ./node-feature-discovery/ks.yaml
+  - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
