--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./namespace.yaml
   - ./externalksecret.yaml
   # Flux-Kustomizations
-  - ./grafana/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./loki/ks.yaml
+  #- ./grafana/ks.yaml
+  #- ./kube-prometheus-stack/ks.yaml
+  #- ./loki/ks.yaml
   - ./thanos/ks.yaml
