--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   #- ./grafana/ks.yaml
   #- ./kube-prometheus-stack/ks.yaml
   #- ./loki/ks.yaml
-  - ./thanos/ks.yaml
+  #- ./thanos/ks.yaml
