--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   #- ./grafana/ks.yaml
-  #- ./kube-prometheus-stack/ks.yaml
-  #- ./loki/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
+  - ./loki/ks.yaml
   - ./thanos/ks.yaml
