--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ EMQX_LB_IP="192.168.0.100"
 
 # flux
 FLUX_SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
+
+# cloudnative-pg
+POSTGRES_SUPER_USER="xxxxxxxx"
+POSTGRES_SUPER_PASS="xxxxxxxx"
