--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -2,10 +2,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: database
 resources:
-  # Pre Flux-Kustomizations  
-  - ./namespace.yaml
-  - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./cloudnative-pg/ks.yaml
-  - ./emqx/ks.yaml
+  - ./cluster.yaml
+  - ./scheduledbackup.yaml
+  - ./prometheusrule.yaml
+  - ./service.yaml
