add postgres instance

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,4 @@ FLUX_SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 # cloudnative-pg
 POSTGRES_SUPER_USER="xxxxxxxx"
 POSTGRES_SUPER_PASS="xxxxxxxx"
+POSTGRES__LB_IP="192.168.0.101"
