--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -20,6 +20,7 @@ spec:
         DOMAIN: "{{.DOMAIN}}"
         ENVIRONMENT: "{{.ENVIRONMENT}}"
         EMQX_LB_IP: "{{.EMQX_LB_IP}}"
+        POSTGRES_LB_IP: "{{.POSTGRES_LB_IP}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
         SERVER_CIDR: "{{.SERVER_CIDR}}"
         VIP_IP: "{{.VIP_IP}}"
