--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -176,6 +176,7 @@ tasks:
           DOCKER_PRIVATE_REGISTRY="${DOCKER_PRIVATE_REGISTRY}"
           ENVIRONMENT="${ENVIRONMENT}"
           EMQX_LB_IP="${EMQX_LB_IP}"
+          POSTGRES_LB_IP="${POSTGRES_LB_IP}"
           LOCAL_DOMAIN="${LOCAL_DOMAIN}"
           SERVER_CIDR="${SERVER_CIDR}"
           VIP_IP="${VIP_IP}"
