--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
@@ -13,6 +13,12 @@ spec:
     labels:
       kube-image-keeper.enix.io/image-caching-policy: ignore
   primaryUpdateStrategy: unsupervised
+  bootstrap:
+    initdb:
+      database: home_assistant
+      owner: home-assistant
+      secret:
+        name: db-home-assistant
   storage:
     size: 10Gi
     storageClass: local-path
