add bootstrap pg secret

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,7 @@ FLUX_SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 POSTGRES_SUPER_USER="xxxxxxxx"
 POSTGRES_SUPER_PASS="xxxxxxxx"
 POSTGRES__LB_IP="192.168.0.101"
+POSTGRES_HASS_USER="xxxxxxxx"
+POSTGRES_HASS_PASS="xxxxxxxx"
+POSTGRES_IMMICH_USER="xxxxxxxx"
+POSTGRES_IMMICH_PASS="xxxxxxxx"
