--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -5,6 +5,6 @@ kind: Kustomization
 namespace: database
 resources:
   - ./externalsecret.yaml
-  - ./cluster.yaml
+  #- ./cluster.yaml
   - ./prometheusrule.yaml
   - ./service.yaml
