--- a/kubernetes/apps/ingress/certificates/certificates.yaml
+++ b/kubernetes/apps/ingress/certificates/certificates.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretName: "${DOMAIN/./-}-tls"
   issuerRef:
-    name: letsencrypt-production
+    name: letsencrypt-staging
     kind: ClusterIssuer
   commonName: "${DOMAIN}"
   dnsNames:
