fix missing nfs module

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -48,6 +48,12 @@ spec:
             enabled: true
       crashCollector:
         disable: false
+      mgr:
+        modules:
+          - name: pg_autoscaler
+            enabled: true
+          - name: rook
+            enabled: true
       dashboard:
         enabled: true
         urlPrefix: /
