--- a/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
@@ -13,7 +13,7 @@ spec:
       - dns01:
           cloudflare:
             email: "${CLOUDFLARE_EMAIL}"
-            apiKeySecretRef:
+            apiTokenSecretRef:
               name: cloudflare-secret
               key: CLOUDFLARE_TOKEN
 ---
@@ -31,6 +31,6 @@ spec:
       - dns01:
           cloudflare:
             email: "${CLOUDFLARE_EMAIL}"
-            apiKeySecretRef:
+            apiTokenSecretRef:
               name: cloudflare-secret
               key: CLOUDFLARE_TOKEN
