add lb ip to shared secrets

--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -15,6 +15,7 @@ spec:
       type: Opaque
       engineVersion: v2
       data:
+        CILIUM_LB_IP: "{{.CILIUM_LB_IP}}"
         CLOUDFLARE_EMAIL: "{{.CLOUDFLARE_EMAIL}}"
         DOCKER_PRIVATE_REGISTRY: "{{.DOCKER_PRIVATE_REGISTRY}}"
         DOMAIN: "{{.DOMAIN}}"
