--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
       enabled: true
     gatewayAPI:
       enabled: true
+      loadbalancerMode: dedicated
     hubble:
       enabled: true
       metrics:
