--- a/kubernetes/apps/kube-system/cilium/app/httproute.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/httproute.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: kube-system
 spec:
   parentRefs:
-    - name: cilium-admin-ingressgateway
+    - name: cilium-ingressgateway
       namespace: ingress
   hostnames: ["hubble.${DOMAIN}"]
   rules:
