--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: monitoring
 spec:
   parentRefs:
-    - name: cilium-admin-ingressgateway
+    - name: cilium-ingressgateway
       namespace: ingress
   hostnames: ["alertmanager.${DOMAIN}"]
   rules:
