--- a/kubernetes/schmapps/home-automation/frigate/app/httproute.yaml
+++ b/kubernetes/schmapps/home-automation/frigate/app/httproute.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: home-automation
 spec:
   parentRefs:
-    - name: cilium-admin-ingressgateway
+    - name: cilium-ingressgateway
       namespace: ingress
   hostnames: ["cctv.${DOMAIN}"]
   rules:
