--- a/kubernetes/apps/monitoring/thanos/app/httproute.yaml
+++ b/kubernetes/apps/monitoring/thanos/app/httproute.yaml
@@ -14,6 +14,6 @@ spec:
         - path:
             value: /
       backendRefs:
-        - name: thanos-query
+        - name: thanos-query-frontend
           port: 9090
           weight: 1
