--- a/kubernetes/apps/monitoring/loki/app/httproute.yaml
+++ b/kubernetes/apps/monitoring/loki/app/httproute.yaml
@@ -14,6 +14,6 @@ spec:
         - path:
             value: /
       backendRefs:
-        - name: loki
-          port: 8080
+        - name: loki-gateway
+          port: 80
           weight: 1
