--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,8 @@ EMQX_USER1_NAME="xxxxxxxx"
 EMQX_USER1_PASSWORD="xxxxxxxx"
 EMQX_LB_IP="192.168.0.100"
 
-# flux
-FLUX_SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
+# slack
+SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 
 # cloudnative-pg
 POSTGRES_SUPER_USER="xxxxxxxx"
