--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -24,6 +24,7 @@ spec:
         POSTGRES_LB_IP: "{{.POSTGRES_LB_IP}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
         SERVER_CIDR: "{{.SERVER_CIDR}}"
+        SLACK_WEBHOOK: "{{.SLACK_WEBHOOK}}"
         VIP_IP: "{{.VIP_IP}}"
         VIP_PORT: "{{.VIP_PORT}}"
   dataFrom:
