--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
@@ -2,7 +2,7 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: dashboard
+  name: rook-ceph-dashboard
   namespace: rook-ceph
 spec:
   parentRefs:
