add nfs server ip

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,10 @@ CLOUDFLARE_TOKEN="xxxxxxxx"
 EMQX_ADMIN_PASSWORD="xxxxxxxx"
 EMQX_USER1_NAME="xxxxxxxx"
 EMQX_USER1_PASSWORD="xxxxxxxx"
-EMQX_LB_IP="192.168.0.100"
+EMQX_LB_IP="192.168.0.102"
+
+# nfs exports
+NFS_SERVER_IP="192.168.0.200"
 
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
