--- a/kubernetes/bootstrap/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/sharedsecrets.yaml
@@ -23,6 +23,7 @@ spec:
         EMQX_LB_IP: "{{.EMQX_LB_IP}}"
         POSTGRES_LB_IP: "{{.POSTGRES_LB_IP}}"
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
+        NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
         SERVER_CIDR: "{{.SERVER_CIDR}}"
         SLACK_WEBHOOK: "{{.SLACK_WEBHOOK}}"
         VIP_IP: "{{.VIP_IP}}"
