add immich vault secrets

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,12 @@ EMQX_USER1_NAME="xxxxxxxx"
 EMQX_USER1_PASSWORD="xxxxxxxx"
 EMQX_LB_IP="192.168.0.102"
 
+# immich
+IMMICH_POSTGRES_USER="xxxxxxxx"
+IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
+IMMICH_JWT_SECRET="xxxxxxxxx"
+IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
+
 # nfs exports
 NFS_SERVER_IP="192.168.0.200"
 
