add simple bootstrap script

--- a/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
@@ -24,3 +24,24 @@ spec:
       remoteRef:
         key: /database/cloudnative-pg
         property: POSTGRES_SUPER_PASS
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: bootstrap-sql
+  namespace: database
+spec:
+  secretStoreRef:
+    name: vault-kv-backend
+    kind: SecretStore
+  target:
+    name: bootstrap-sql
+    template:
+      type: opaque
+      data:
+        immich.sql: |
+          CREATE USER {{ .IMMICH_POSTGRES_USER }} WITH PASSWORD {{ .IMMICH_POSTGRES_PASSWORD }};
+          CREATE DATABASE immich WITH OWNER {{ .IMMICH_POSTGRES_USER }};
+  dataFrom:
+    - extract:
+        key: /media/immich
