fix bootstrap format

--- a/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
@@ -40,8 +40,8 @@ spec:
       type: opaque
       data:
         immich.sql: |
-          CREATE USER {{ .IMMICH_POSTGRES_USER }} WITH PASSWORD {{ .IMMICH_POSTGRES_PASSWORD }};
-          CREATE DATABASE immich WITH OWNER {{ .IMMICH_POSTGRES_USER }};
+          CREATE USER '{{ .IMMICH_POSTGRES_USER }}' WITH PASSWORD '{{ .IMMICH_POSTGRES_PASSWORD }}';
+          CREATE DATABASE 'immich' WITH OWNER '{{ .IMMICH_POSTGRES_USER }}'';
   dataFrom:
     - extract:
         key: /media/immich
