add hass db bootstrap

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,10 @@ EMQX_USER1_NAME="xxxxxxxx"
 EMQX_USER1_PASSWORD="xxxxxxxx"
 EMQX_LB_IP="192.168.0.102"
 
+# home-assistant
+HASS_POSTGRES_USER="xxxxxxxx"
+HASS_POSTGRES_PASSWORD="xxxxxxxx"
+
 # immich
 IMMICH_POSTGRES_USER="xxxxxxxx"
 IMMICH_POSTGRES_PASSWORD="xxxxxxxx"
