--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -69,7 +69,7 @@ tasks:
       - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/database
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=database
-          policies=database,media,default
+          policies=database,media,home-automation,default
           ttl=1440h
       - echo "path \"kv/data/home-automation/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write home-automation -
       - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/home-automation
@@ -214,6 +214,18 @@ tasks:
           IMMICH_POSTGRES_PASSWORD="{{.IMMICH_POSTGRES_PASSWORD}}"
           IMMICH_JWT_SECRET="{{.IMMICH_JWT_SECRET}}"
           IMMICH_TYPESENSE_API_KEY="{{.IMMICH_TYPESENSE_API_KEY}}"
+      # home-automation/home-assistant
+      - vault kv put -mount=kv/ home-automation/home-assistant
+          HASS_POSTGRES_USER="{{.HASS_POSTGRES_USER}}"
+          HASS_POSTGRES_PASSWORD="{{.HASS_POSTGRES_PASSWORD}}"
+          ALARM_CODE="{{.HASS_ALARM_CODE}}"
+          GIT_REPO="{{.HASS_GIT_REPO}}"
+          DEPLOY_KEY_B64="{{.HASS_DEPLOY_KEY_B64}}"
+          HACS_TOKEN="{{.HASS_HACS_TOKEN}}"
+          LDAP_ROOT="{{.LDAP_ROOT}}"
+          LOCAL_DOMAIN="{{.LOCAL_DOMAIN}}"
+          LOCATION_LAT="{{.HASS_LOCATION_LAT}}"
+          LOCATION_LONG="{{.HASS_LOCATION_LONG}}"
 
       # databases/postgresql
       - vault kv put -mount=kv/ databases/postgresql
