--- a/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/externalsecret.yaml
@@ -42,6 +42,11 @@ spec:
         immich.sql: |
           CREATE USER '{{ .IMMICH_POSTGRES_USER }}' WITH PASSWORD '{{ .IMMICH_POSTGRES_PASSWORD }}';
           CREATE DATABASE 'immich' WITH OWNER '{{ .IMMICH_POSTGRES_USER }}'';
+        home_assistant.sql: |
+          CREATE USER '{{ .HASS_POSTGRES_USER }}' WITH PASSWORD '{{ .HASS_POSTGRES_PASSWORD }}';
+          CREATE DATABASE 'home_assistant' WITH OWNER '{{ .HASS_POSTGRES_USER }}'';
   dataFrom:
     - extract:
         key: /media/immich
+    - extract:
+        key: /home-automation/home-assistant
