--- a/kubernetes/apps/database/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/helmrelease.yaml
@@ -40,3 +40,5 @@ spec:
         secretRefs:
         - name: bootstrap-sql
           key: immich.sql
+        - name: bootstrap-sql
+          key: home_assistant.sql
