--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  #- ./cloudnative-pg/ks.yaml
+  - ./cloudnative-pg/ks.yaml
   - ./emqx/ks.yaml
   - ./redis/ks.yaml
