--- a/kubernetes/apps/database/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/helmrelease.yaml
@@ -39,6 +39,4 @@ spec:
       postInitApplicationSQLRefs:
         secretRefs:
         - name: bootstrap-sql
-          key: immich.sql
-        - name: bootstrap-sql
-          key: home_assistant.sql
+          key: bootstrap.sql
