fix bootstrap values location

--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
@@ -15,10 +15,12 @@ spec:
   primaryUpdateStrategy: unsupervised
   bootstrap:
     initdb:
-      database: immich
-      owner: immich
-      secret:
-        name: db-immich
+      postInitApplicationSQLRefs:
+        secretRefs:
+        - name: bootstrap-sql
+          key: immich.sql
+        - name: bootstrap-sql
+          key: home_assistant.sql
   storage:
     size: 10Gi
     storageClass: local-path
