--- a/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
@@ -2,25 +2,25 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: db-immich
+  name: bootstrap-sql
   namespace: database
 spec:
   secretStoreRef:
     name: vault-kv-backend
     kind: SecretStore
   target:
-    name: db-immich
+    name: bootstrap-sql
     template:
-      engineVersion: v2
-      metadata:
-        labels:
-          cnpg.io/reload: "true"
-  data:
-    - secretKey: username
-      remoteRef:
-        key: /database/cloudnative-pg
-        property: POSTGRES_IMMICH_USER
-    - secretKey: password
-      remoteRef:
-        key: /database/cloudnative-pg
-        property: POSTGRES_IMMICH_PASS
+      type: opaque
+      data:
+        immich.sql: |
+          CREATE USER {{ .IMMICH_POSTGRES_USER }} WITH PASSWORD '{{ .IMMICH_POSTGRES_PASSWORD }}';
+          CREATE DATABASE immich WITH OWNER {{ .IMMICH_POSTGRES_USER }};
+        home_assistant.sql: |
+          CREATE USER {{ .HASS_POSTGRES_USER }} WITH PASSWORD '{{ .HASS_POSTGRES_PASSWORD }}';
+          CREATE DATABASE home_assistant WITH OWNER {{ .HASS_POSTGRES_USER }};
+  dataFrom:
+    - extract:
+        key: /media/immich
+    - extract:
+        key: /home-automation/home-assistant
