--- a/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: bootstrap-immich
+  name: bootstrap-sql
   namespace: database
 spec:
   secretStoreRef:
@@ -14,29 +14,7 @@ spec:
       type: opaque
       data:
         immich.sql: |
-          CREATE USER {{ .IMMICH_POSTGRES_USER }} WITH PASSWORD '{{ .IMMICH_POSTGRES_PASSWORD }}';
-          CREATE DATABASE immich WITH OWNER {{ .IMMICH_POSTGRES_USER }};
+          ALTER USER immich WITH PASSWORD '{{ .IMMICH_POSTGRES_PASSWORD }}';
   dataFrom:
     - extract:
         key: /media/immich
----
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: bootstrap-home-assistant
-  namespace: database
-spec:
-  secretStoreRef:
-    name: vault-kv-backend
-    kind: SecretStore
-  target:
-    name: bootstrap-home-assistant
-    template:
-      type: opaque
-      data:
-        home-assistant.sql: |
-          CREATE USER {{ .HASS_POSTGRES_USER }} WITH PASSWORD '{{ .HASS_POSTGRES_PASSWORD }}';
-          CREATE DATABASE home_assistant WITH OWNER {{ .HASS_POSTGRES_USER }};
-  dataFrom:
-    - extract:
-        key: /home-automation/home-assistant
