--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
@@ -19,7 +19,7 @@ spec:
       owner: immich
       postInitApplicationSQLRefs:
         secretRefs:
-        - name: bootstrap-sql
+        - name: bootstrap-immich
           key: immich.sql
   storage:
     size: 10Gi
